aspect-ratio not recomputed on hover https://bugs.webkit.org/show_bug.cgi?id=224028

Patch by Rob Buis <rbuis@igalia.com> on 2021-04-01
Reviewed by Zalan Bujtas.

LayoutTests/imported/w3c:

Add test for this.

* web-platform-tests/css/css-sizing/aspect-ratio/replaced-element-dynamic-aspect-ratio-expected.xht: Added.
* web-platform-tests/css/css-sizing/aspect-ratio/replaced-element-dynamic-aspect-ratio.html: Added.

Source/WebCore:

Detect change in aspect-ratio on hover.

Test: imported/w3c/web-platform-tests/css/css-sizing/aspect-ratio/replaced-element-dynamic-aspect-ratio.html

* rendering/style/RenderStyle.cpp:
(WebCore::rareNonInheritedDataChangeRequiresLayout):

Canonical link: https://commits.webkit.org/236045@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@275377 268f45cc-cd09-0410-ab3c-d52691b4dbfc